# i8080_emulator

./: .gitignore  2  Cargo.toml  ]
src/: disassemble.rs  emulate8080.rs  i8080.rs  main.rs  shaders.rs
src/i8080/: bitwise.rs  io_ops.rs  jump.rs  load.rs  math.rs  stack.rs
